--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+body{    
+    background-color:  #f5f6fa;
+}
+.comments{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    margin: 2% auto;
+    list-style-type:none;
+}
+.comment-box{
+    margin: 1% 0;
+    background-color:#ffffff ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2%;
+    border-radius: 10px;
+}
+.box1{
+    border-radius: 10px;
+    padding: 1.5%;
+    margin-right: 4%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f5f6fa;
+    height: 100px;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+   
+}
+.box1 span{
+    padding-top: 10px;
+    color:#4f5196;
+}
+.time{
+    color: ;
+}
+.avatar{
+    border-radius: 50%;
+    margin-right: 10px;
+}
+.box2-flex1{
+    display: flex;
+    align-items: center;
+   
+}
+.reply{
+    margin-left: auto;
+   color: #5357b6;
 }
